Fix description text size on tablet screen

--- a/src/components/portfolio/Description.css
+++ b/src/components/portfolio/Description.css
@@ -72,7 +72,11 @@
 }
 
 @media screen and (orientation: landscape) and (min-device-width: 319px) and (max-device-width: 480px) {
-  .item-desc-text {
+  .item-description p {
+    font-size: 16px;
+  }
+
+  .item-description .item-desc-text {
     font-size: 10px;
     line-height: 18px;
   }
